--- a/src/components/Speciality/Speciality.css
+++ b/src/components/Speciality/Speciality.css
@@ -18,9 +18,10 @@ h3 {
 .unique-speciality p {
   color: #76767f; /* RGB(118, 118, 127) */
   font-family: "Poppins", sans-serif;
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 400;
-  text-align: left;
+  text-align: justify;
+  line-height: 2;
 }
 
 .speciality-item {
