--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -24,6 +24,7 @@
   font-weight: bolder;
   font-size: medium;
 }
+
 .collapse {
   padding-top: 5px;
   padding-left: 30px;
@@ -75,6 +76,47 @@
   color: #2a3a91;
 }
 
+.navbar-toggler {
+  border: none;
+  padding: 0;
+}
+
+.navbar-toggler-icon {
+  display: none;
+}
+
+.custom-toggler {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+}
+
+.custom-toggler span {
+  display: block;
+  width: 3px;
+  height: 3px;
+  background-color: #000;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+}
+
+.custom-toggler.open span:nth-child(1) {
+  transform: translateY(6px) scale(1.5);
+  background-color: #ffa92c;
+}
+
+.custom-toggler.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.custom-toggler.open span:nth-child(3) {
+  transform: translateY(-6px) scale(1.5);
+  background-color: #ffa92c;
+}
+
 @media (max-width: 991px) {
   .navbar-brand {
     margin-left: 0;
@@ -111,5 +153,27 @@
   .dropdown-item {
     color: inherit;
     padding-left: 30px;
+  }
+
+  .navbar-collapse.show {
+    animation: slideDown 0.5s ease, fadeIn 0.5s ease;
+  }
+
+  @keyframes slideDown {
+    from {
+      transform: translateY(-20px);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
 }
