--- a/src/components/Speciality/Speciality.css
+++ b/src/components/Speciality/Speciality.css
@@ -45,7 +45,7 @@ h3 {
     font-size: 20px; /* Adjust font size for tablets */
   }
 
-  p {
+  .unique-speciality p {
     font-size: 16px; /* Adjust font size for tablets */
   }
 
@@ -64,7 +64,7 @@ h3 {
     font-size: 22px; /* Adjust font size for mobile devices */
   }
 
-  p {
+  .unique-speciality p {
     font-size: 18px; /* Adjust font size for mobile devices */
   }
 
