--- a/src/components/whyChoose/whyChoose.css
+++ b/src/components/whyChoose/whyChoose.css
@@ -17,7 +17,8 @@
   color: #000000;
   padding-left: 0;
   padding-right: 0;
-  text-align: left;
+  display: flex;
+  text-align: start;
   margin-bottom: 20px;
   box-sizing: border-box;
   width: 100%;
@@ -75,6 +76,9 @@
 @media (min-width: 425px) {
   .why-us-heading {
     font-size: 2.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .why-choose-us p {
@@ -88,6 +92,9 @@
   .why-us-heading {
     font-size: 2.5rem;
     padding-left: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .whyChoose-container p {
@@ -105,7 +112,9 @@
 @media (min-width: 1024px) {
   .why-us-heading {
     font-size: 3rem;
-    padding-left: 0;
+    display: flex;
+    align-items: left;
+    justify-content: left;
   }
 
   .whyChoose-container {
