--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -7,3 +7,11 @@
   justify-content: center;
   font-size: 80px;
 }
+
+.news-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: auto;
+}
