--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -8,10 +8,32 @@
   font-size: 80px;
 }
 
-.news-img {
+.news-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
+  justify-content: space-around;
+  margin: 20px;
+}
+
+.news-item {
+  text-align: center;
+  max-width: 45%;
+}
+
+#news-img-one {
+  width: 550px;
   height: auto;
+}
+
+#news-img-two {
+  width: 250px;
+  height: auto;
+}
+
+.news-title {
+  background-color: #f4f4f4;
+  padding: 10px;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #2b3991;
+  margin-top: 10px;
 }
