--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -85,39 +85,7 @@
   display: none;
 }
 
-.custom-toggler {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 24px;
-  height: 24px;
-  cursor: pointer;
-}
-
-.custom-toggler span {
-  display: block;
-  width: 3px;
-  height: 3px;
-  background-color: #000;
-  border-radius: 50%;
-  transition: all 0.3s ease;
-}
-
-.custom-toggler.open span:nth-child(1) {
-  transform: translateY(6px) scale(1.5);
-  background-color: #ffa92c;
-}
-
-.custom-toggler.open span:nth-child(2) {
-  opacity: 0;
-}
-
-.custom-toggler.open span:nth-child(3) {
-  transform: translateY(-6px) scale(1.5);
-  background-color: #ffa92c;
-}
-
-@media (max-width: 991px) {
+@media (max-width: 768px) {
   .navbar-brand {
     margin-left: 0;
   }
@@ -157,6 +125,52 @@
 
   .navbar-collapse.show {
     animation: slideDown 0.5s ease, fadeIn 0.5s ease;
+  }
+
+  .custom-toggler {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    position: relative;
+  }
+
+  .custom-toggler span {
+    display: block;
+    width: 24px;
+    height: 3px;
+    background-color: #000;
+    border-radius: 1px;
+    transition: all 0.3s ease;
+    position: absolute;
+  }
+
+  .custom-toggler span:nth-child(1) {
+    top: 6px;
+  }
+
+  .custom-toggler span:nth-child(2) {
+    top: 12px;
+  }
+
+  .custom-toggler span:nth-child(3) {
+    top: 18px;
+  }
+
+  .custom-toggler.open span:nth-child(1) {
+    transform: rotate(45deg);
+    top: 12px;
+  }
+
+  .custom-toggler.open span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .custom-toggler.open span:nth-child(3) {
+    transform: rotate(-45deg);
+    top: 12px;
   }
 
   @keyframes slideDown {
