--- a/src/components/Caregiver/CustomAccordion.css
+++ b/src/components/Caregiver/CustomAccordion.css
@@ -23,17 +23,17 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 16px;
-  font-weight: bold;
-  color: #333;
+  font-size: 18px;
+  font-weight: bolder;
+  color: black;
 }
 
 .custom-accordion-body {
   padding: 10px;
   border-top: 1px solid #ddd;
   background: #fff;
-  font-size: 14px;
-  color: #666;
+  font-size: 16px;
+  color: black;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease;
