Caregiver page Card section changes

--- a/src/components/Caregiver/Caregiver.css
+++ b/src/components/Caregiver/Caregiver.css
@@ -57,7 +57,7 @@
 }
 
 .custom-card-text ul {
-  list-style-type: disc; /* Ensure bullet points (•) appear */
+  list-style-type: none; /* Ensure bullet points (•) appear */
 }
 
 .custom-card-text {
