--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,6 +8,9 @@
   padding-top: 20px;
   padding-bottom: 20px;
   z-index: 9999;
+  position: fixed; /* Make the navbar fixed */
+  top: 0; /* Align it to the top */
+  width: 100%; /* Make it full-width */
 }
 
 .navbar-brand {
