Pages for individual Alumni

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -131,6 +131,7 @@
   }
 
   .custom-toggler {
+    margin-right: 18px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
