--- a/src/components/Fixed-Footer/Fixed-Footer.css
+++ b/src/components/Fixed-Footer/Fixed-Footer.css
@@ -4,8 +4,9 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
-  padding: 0px 0;
+  padding: 0;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  background-color: #2b3991;
 }
 
 .course-option {
@@ -27,4 +28,33 @@
 .course-option:hover {
   background-color: whitesmoke;
   color: black;
+}
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+  .course-option {
+    font-size: 14px;
+    padding: 8px;
+  }
+}
+
+@media (max-width: 992px) {
+  .course-option {
+    font-size: 12px;
+    padding: 6px;
+  }
+}
+
+@media (max-width: 768px) {
+  .course-option {
+    font-size: 10px;
+    padding: 4px;
+  }
+}
+
+@media (max-width: 576px) {
+  .course-option {
+    font-size: 8px;
+    padding: 2px;
+  }
 }
