--- a/src/components/CaregiverAlumni/Alumni.css
+++ b/src/components/CaregiverAlumni/Alumni.css
@@ -51,8 +51,10 @@ body {
 
 .seventy {
   text-decoration: none;
+  text-align: center;
 }
 
 .eighty {
   text-decoration: none;
+  text-align: center;
 }
