--- a/src/components/About-Us/About.css
+++ b/src/components/About-Us/About.css
@@ -1,4 +1,3 @@
-/* Base styles */
 .about-us-container {
   background-color: rgba(0, 0, 0, 0); /* transparent background */
   color: rgb(118, 118, 127); /* text color */
@@ -63,6 +62,26 @@
   width: 100%; /* Ensure it doesn't exceed container width */
 }
 
+.brochure {
+  margin-top: 20px;
+  text-align: left; /* Ensure the brochure link is left-aligned */
+}
+
+.btn-download {
+  background-color: #2b3991;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.btn-download:hover {
+  background-color: #2b3991;
+}
+
 /* Media Queries for responsiveness */
 
 /* Mobile L (425px and up) */
@@ -74,6 +93,20 @@
   .about-us-container p {
     font-size: 18px;
     line-height: 2;
+  }
+
+  .brochure {
+    text-align: center;
+  }
+}
+
+@media (max-width: 320px) {
+  .brochure {
+    text-align: center;
+  }
+
+  .btn-download {
+    font-size: 18px;
   }
 }
 
