--- a/src/components/About-Us/About.css
+++ b/src/components/About-Us/About.css
@@ -5,7 +5,6 @@
   padding: 20px;
   box-sizing: border-box; /* Ensure padding is included in the element's total width and height */
   max-width: 100%; /* Prevent container from exceeding screen width */
-  overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
 .about-us-heading {
@@ -13,53 +12,34 @@
   font-weight: 800; /* Make the text very bold */
   font-size: 2rem; /* Base font size */
   color: #000000;
-  padding-left: 0; /* Remove padding for smaller screens */
   text-align: center; /* Center the heading text */
   margin-bottom: 20px;
-  box-sizing: border-box;
-  width: 100%; /* Ensure it doesn't exceed container width */
 }
 
 .image-line-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%; /* Ensure it doesn't exceed container width */
-  box-sizing: border-box;
 }
 
-.image-line-wrapper .line {
+.line {
   width: 100%; /* Line takes the full width of its container */
   height: 2px;
   background-color: #2b3991; /* Line color */
-  margin-bottom: 35px; /* Space between the line and the image */
-  box-sizing: border-box;
+  margin-bottom: 20px; /* Space between the line and the image */
 }
 
 .img-fluid {
-  margin-bottom: 20px;
   max-width: 100%; /* Ensures the image is responsive */
   height: auto; /* Maintains the aspect ratio of the image */
-  box-sizing: border-box;
-}
-
-.about-us-container h2 {
-  font-weight: bold;
-  color: black; /* Color for the heading */
   margin-bottom: 20px;
-  text-align: center; /* Center the h2 text */
-  box-sizing: border-box;
-  width: 100%; /* Ensure it doesn't exceed container width */
 }
 
 .about-us-container p {
-  font-size: 16px;
-  line-height: 1.6;
+  font-size: 18px;
+  line-height: 2;
   margin-bottom: 20px;
-  font-weight: 400;
   text-align: justify;
-  box-sizing: border-box;
-  width: 100%; /* Ensure it doesn't exceed container width */
 }
 
 .brochure {
@@ -85,18 +65,9 @@
 /* Media Queries for responsiveness */
 
 /* Mobile L (425px and up) */
-@media (min-width: 424px) {
+@media (min-width: 425px) {
   .about-us-heading {
     font-size: 2.2rem; /* Slightly larger text for Mobile L */
-  }
-
-  .about-us-container p {
-    font-size: 18px;
-    line-height: 2;
-  }
-
-  .brochure {
-    text-align: center;
   }
 }
 
@@ -106,7 +77,7 @@
   }
 
   .btn-download {
-    font-size: 18px;
+    font-size: 15px;
   }
 }
 
@@ -116,11 +87,6 @@
     font-size: 2.5rem; /* Larger text for medium screens */
     text-align: left; /* Align text to the left for larger screens */
     padding-left: 20px; /* Add some padding for larger screens */
-  }
-
-  .about-us-container p {
-    font-size: 18px;
-    line-height: 2;
   }
 }
 
@@ -134,9 +100,5 @@
   .about-us-container {
     max-width: 1200px; /* Limit the width for better readability on large screens */
     margin: auto; /* Center the container */
-  }
-
-  .about-us-container p {
-    font-size: 18px;
   }
 }
