--- a/src/components/whyChoose/whyChoose.css
+++ b/src/components/whyChoose/whyChoose.css
@@ -108,6 +108,20 @@
   }
 }
 
+@media (max-width: 320px) {
+  .why-us-heading {
+    font-size: 2.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .why-choose-us p {
+    font-size: 18px;
+    line-height: 2;
+  }
+}
+
 /* Desktop (1024px and up) */
 @media (min-width: 1024px) {
   .why-us-heading {
