--- a/src/components/AdminPanel/AdminLogin.css
+++ b/src/components/AdminPanel/AdminLogin.css
@@ -1,60 +1,32 @@
+/* components/Login/Login.css */
 .login-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 100vh; /* Full viewport height */
-  background-color: #f8f9fa; /* Light background color */
+  justify-content: center;
+  height: 100vh;
 }
 
-.login-box {
-  background-color: white;
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 400px;
-  text-align: center;
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.login-title {
-  margin-bottom: 1rem;
-  font-size: 1.5rem;
-  font-weight: bold;
+input {
+  margin: 10px;
+  padding: 10px;
+  width: 200px;
 }
 
-.login-error {
-  color: red;
-  font-weight: bold;
-  margin-bottom: 1rem;
-}
-
-.login-field {
-  margin-bottom: 1rem;
-  text-align: left;
-}
-
-.login-input {
-  width: 100%;
-  padding: 0.5rem;
-  margin-top: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.login-button-container {
-  margin-top: 1rem;
-}
-
-.login-button {
-  width: 100%;
-  padding: 0.75rem;
-  background-color: #28a745;
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
   color: white;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
 }
 
-.login-button:hover {
-  background-color: #218838;
+button:hover {
+  background-color: #0056b3;
 }
