--- a/src/components/AdminPanel/AdminPanel.css
+++ b/src/components/AdminPanel/AdminPanel.css
@@ -37,7 +37,7 @@
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #2b3991;
   color: white;
   border: none;
   border-radius: 4px;
